[package]
name = "malignius"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"

[dev-dependencies]
derive_builder = "0.12.0"
rusqlite = "0.29.0"
tokio = { version = "1.32.0", features = ["full"] }
