[package]
name = "malignius"
version = "0.0.1"
description = "Fixures and seeding for your tests"
repository = "https://github.com/maxdeviant/malignius"
documentation = "https://docs.rs/malignius"
categories = ["development-tools::testing"]
keywords = ["malignius", "fixtures", "seeding"]
authors = ["Marshall Bowers <elliott.codes@gmail.com>"]
license = "MIT"
edition = "2021"
rust = "1.75"

[dependencies]

[dev-dependencies]
derive_builder = "0.12.0"
rusqlite = "0.29.0"
tokio = { version = "1.32.0", features = ["full"] }
